--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "description": "Rendition React starter project",
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "gh-pages": "^4.0.0",
     "typescript": "4.1.3"
   }
 }
