--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "figma_design",
+  "name": "Aggrajan-Sewak-Media",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://sahilsharma0420.github.io/figma_design",
+  "homepage": "http://sahilsharma0420.github.io/Aggrajan-Sewak-Media",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
